--- a/src/html/config.html
+++ b/src/html/config.html
@@ -6,14 +6,24 @@
     </div>
   </div>
   <div class="block">
+    <h3>カスタマイズビューID<span class="kintoneplugin-require">*</span></h3>
+    <div id="plugin-config-area-viewID-require"></div>
+    <div class="kintoneplugin-outer">
+      <div class="kintoneplugin-desc">カスタマイズビューの一覧IDを記入してください</div>
+      <div id="plugin-config-area-viewID"></div>
+      <div class="kintoneplugin-desc">※ カスタマイズビューのHTMLには<span class="bold"> &lt;div id="myDiv"&gt;&lt;/div&gt; </span>と記述してください。</div>
+    </div>
+  </div>
+  <div class="block">
     <h3>グラフ名</h3>
     <div class="kintoneplugin-outer">
-      <p>グラフ名を記入してください</p>
+      <div class="kintoneplugin-desc">グラフ名を記入してください</div>
       <div id="plugin-config-area-name"></div>
     </div>
   </div>
   <div class="block">
-    <h3>X軸</h3>
+    <h3>X軸<span class="kintoneplugin-require">*</span></h3>
+    <div id="plugin-config-area-xaxis-require"></div>
     <div class="kintoneplugin-outer">
       <table>
         <tr>
@@ -28,7 +38,8 @@
     </div>
   </div>
   <div class="block">
-    <h3>Y軸</h3>
+    <h3>Y軸<span class="kintoneplugin-require">*</span></h3>
+    <div id="plugin-config-area-yaxis-require"></div>
     <div class="kintoneplugin-outer">
       <table>
         <tr>
@@ -43,7 +54,8 @@
     </div>
   </div>
   <div class="block">
-    <h3>Z軸</h3>
+    <h3>Z軸<span class="kintoneplugin-require">*</span></h3>
+    <div id="plugin-config-area-zaxis-require"></div>
     <div class="kintoneplugin-outer">
       <table>
         <tr>
