--- a/src/html/config.html
+++ b/src/html/config.html
@@ -7,11 +7,11 @@
   </div>
   <div class="block">
     <h3>カスタマイズビューID<span class="kintoneplugin-require">*</span></h3>
-    <div id="plugin-config-area-viewID-require"></div>
+    <div id="plugin-config-area-viewId-require" class="require kintoneplugin-alert">必須項目が入力されていません</div>
     <div class="kintoneplugin-outer">
       <div class="kintoneplugin-desc">カスタマイズビューの一覧IDを記入してください</div>
-      <div id="plugin-config-area-viewID"></div>
-      <div class="kintoneplugin-desc">※ カスタマイズビューのHTMLには<span class="bold"> &lt;div id="myDiv"&gt;&lt;/div&gt; </span>と記述してください。</div>
+      <div id="plugin-config-area-viewId"></div>
+      <div class="kintoneplugin-desc">※ カスタマイズビューのHTMLには<span class="bold"> &lt;div id="myDiv"&gt;&lt;/div&gt; </span>と記述してください</div>
     </div>
   </div>
   <div class="block">
@@ -23,7 +23,7 @@
   </div>
   <div class="block">
     <h3>X軸<span class="kintoneplugin-require">*</span></h3>
-    <div id="plugin-config-area-xaxis-require"></div>
+    <div id="plugin-config-area-xaxis-require" class="require kintoneplugin-alert">必須項目が入力されていません</div>
     <div class="kintoneplugin-outer">
       <table>
         <tr>
@@ -32,14 +32,14 @@
         </tr>
         <tr>
           <td>軸名：</td>
-          <td id="plugin-config-area-xaxis-name" ></td>
+          <td id="plugin-config-area-xaxis-name"></td>
         </tr>
       </table>
     </div>
   </div>
   <div class="block">
     <h3>Y軸<span class="kintoneplugin-require">*</span></h3>
-    <div id="plugin-config-area-yaxis-require"></div>
+    <div id="plugin-config-area-yaxis-require" class="require kintoneplugin-alert">必須項目が入力されていません</div>
     <div class="kintoneplugin-outer">
       <table>
         <tr>
@@ -55,7 +55,7 @@
   </div>
   <div class="block">
     <h3>Z軸<span class="kintoneplugin-require">*</span></h3>
-    <div id="plugin-config-area-zaxis-require"></div>
+    <div id="plugin-config-area-zaxis-require" class="require kintoneplugin-alert">必須項目が入力されていません</div>
     <div class="kintoneplugin-outer">
       <table>
         <tr>
@@ -69,6 +69,7 @@
       </table>
     </div>
   </div>
+  <div id="plugin-config-area-all-require" class="require kintoneplugin-alert">必須項目が入力されていません</div>
   <div class="block">
     <button id="submit" class="kintoneplugin-button-dialog-ok">保存</button>
     <button id="cancel" class="kintoneplugin-button-dialog-cancel">キャンセル</button>
